assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&family=Jua&display=swap");

:root {
  --font-1: "Exo";
  --font-2: "Jua";
}

* {
  margin: 0;
  padding: 0;
}

body {
  font-family: Exo;
  background-color: rgb(2, 2, 2);
  min-height: 100vh;
}

/* Force override of bootstrap row style to ensure page width
was kept at the correct amounts. */
.row {
  margin: 0 !important;
  padding: 0 !important;
}

/* NAVBAR for desktop*/

.navbar {
  padding: 0;
  width: 100%;
  position: fixed;
  bottom: 0; /* Stick to the bottom initially */
  background: rgba(0, 0, 0, 0.8);
  transition: all 0.3s ease; /* Smooth transition */
  z-index: 1000; /* Ensure it appears above other elements */
}

.desktop-nav {
  position: fixed; /* position absolutely so it won't follow*/
  top: 0;
  left: 0;
  height: 70px;
  padding-top: 15px;
  padding-bottom: 15px;
  align-items: center;
  background: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center; /* center nav links */
  width: 100%;
}

.mobile-nav {
  display: none;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background: rgba(0, 0, 0, 0.9);
  padding: 10px 20px;
  justify-content: space-evenly;
  z-index: 1000;
}

.mobile-nav button {
  width: 50%;
  background: none;
  border: none;
  outline: none;
  color: white;
  font-size: 1.5rem;
}

.mobile-nav > button:first-child {
  text-align: left;
  margin-left: 1rem;
}

.mobile-nav > button {
  text-align: right;
  margin-right: 1rem;
}

.nav-links a {
  color: white;
  margin-left: 3rem;
  text-decoration: none;
  margin-right: 3rem;
  font-size: 1.5rem;
  line-height: 1.5rem;
  transition: ease 0.4s;
}

.nav-links a:hover {
  color: rgb(255, 150, 13);
}

.nav-logo img {
  margin-left: 5rem;
  margin-right: 5rem;
  height: 40px;
}

/* HERO IMAGE */

.hero {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.hero-image {
  width: 100%;
  height: auto;
  object-fit: cover;
}

.hero h1 {
  display: flex;
  color: white;
  position: absolute;
  font-size: 10rem;
  top: 20%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-family: var(--font-2);
  letter-spacing: 0.5rem;
  text-shadow: 3px 2px 1px black;
  background-color: transparent;
  opacity: 1 !important;
}

.about-content {
  position: absolute;
  padding: 4rem 0;
  box-sizing: border-box;
  width: 100%;
  z-index: 2;
  background: linear-gradient(
    to bottom,
    #000000 6rem,
    rgba(18, 154, 240, 0) 100%
  );
}

.callout-h1 {
  font-weight: 700;
  font-size: 3.4rem;
  color: white;
  padding: 1.7rem 0rem 1.5rem 3rem;
  z-index: 99;
}

.callout-h3 {
  font-weight: 200;
  color: white;
  padding: 0rem 0rem 1.5rem 3rem;
  z-index: 99;
}

#about {
  overflow: hidden;
}

#about p {
  color: white;
  font-size: 1rem;
  padding: 0rem 3rem 1.5rem 3rem;
  z-index: 99;
}

.landing-image {
  height: 800px;
  object-fit: cover;
  overflow: hidden;
}

.features {
  display: none;
}

@media (max-width: 1024px) {
  .desktop-nav {
    display: none;
  }

  .mobile-nav {
    display: flex;
  }

  .mobile-nav button {
    font-size: 4rem;
  }

  .mobile-nav > button {
    margin-right: 4rem;
  }

  .mobile-nav > button:first-child {
    margin-left: 4rem;
  }

  .dropdown {
    display: none;
    position: fixed;
    height: 450px;
    top: 45.1%;
    left: 0;
    width: 100%;
    background: rgba(0, 0, 0, 0.9);
    padding: 30px;
    margin: 0;
    border: none;
    z-index: 1000;
    transition: ease-in(0.3s);
  }

  .dropdown a {
    color: white;
    text-decoration: none;
    display: block;
    margin: 10px 0;
    font-size: 2.8rem;
    transition: 0.3s;
  }

  .dropdown a:hover {
    color: orangered;
  }

  .nomadica a {
    padding-left: 4rem;
  }

  .purchase a {
    text-align: right;
    padding-right: 4rem;
  }

  .market-img {
    width: 50px;
    align-items: center;
  }

  /* Scroll Behavior */
  .mobile-nav.scrolled {
    bottom: unset; /* Unset bottom positioning */
    top: 0; /* Stick to the top */
  }

  .dropdown-scrolled {
    top: unset;
    bottom: 45.1%;
  }

  .nav-links .hero-image {
    width: 100%;
  }

  .hero {
    height: 100vh;
  }

  .hero-image {
    width: 100vw; /* Ensures it fills the viewport width */
    height: 100vh; /* Ensures it fills the viewport height */
    object-fit: cover; /* Scales image to fill the container, cropping overflow */
    object-position: center; /* Centers the image */
  }
}

@media (max-width: 768px) {
  .mobile-nav button {
    font-size: 2.5rem;
  }
  .dropdown {
    height: 400px;
    top: 53.4%;
  }

  .dropdown a {
    font-size: 2.3rem;
  }

  .nomadica a {
    padding-left: 3.5rem;
  }

  .purchase a {
    text-align: right;
    padding-right: 3.5rem;
  }

  .market-img {
    width: 40px;
  }

  .dropdown-scrolled {
    top: unset;
    bottom: 53.45%;
  }
}

@media (max-width: 450px) {
  .mobile-nav button {
    font-size: 2rem;
  }

  .mobile-nav > button {
    margin-right: 1rem;
  }

  .mobile-nav > button:first-child {
    margin-left: 1rem;
  }

  .dropdown {
    height: 310px;
    top: 58.7%;
  }

  .dropdown a {
    font-size: 1.6rem;
  }

  .nomadica a {
    padding-left: 0.5rem;
  }

  .purchase a {
    text-align: right;
    padding-right: 0.5rem;
  }

  .market-img {
    width: 30px;
  }

  .dropdown-scrolled {
    top: unset;
    bottom: 58.75%;
  }
}

